--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             // --- IMPORTANT: SET YOUR BACKEND URL HERE ---
             // This will be the URL you get from Render after deploying the Python app.
-            const backendUrl = 'https://your-render-app-name.onrender.com/optimize';
+            const backendUrl = 'https://timed-wealth-tax.onrender.com/';
 
             const params = {
                 r:    { min: 0.00, max: 0.10, step: 0.001, value: 0.03, label: 'r (interest rate)' },
