--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Interactive Life-Cycle Savings Model</title>
-        
-        <!-- External Libraries -->
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0KOVEMcAgscc9ST4vZGTlzNCsoB8hP8lJ6d+xq2DIe4HHnsdx8rWF" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js" integrity="sha384-XjKyOOlGwcjNTAIQHIpgOno0Hl1YQqzUOEleOLALmuqehneUG+vnGctmNOspLBIO" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Life-Cycle Savings Model</title>
     
-        <style>
-            body { font-family: 'Inter', sans-serif; }
-            .katex { font-size: 1.1em; }
-            .slider-container { display: grid; grid-template-columns: 40px 1fr 60px; gap: 1rem; align-items: center; }
-            .prose h3 { font-weight: 600; } /* Use semibold for headings instead of bold */
-        </style>
-    </head>
+    <!-- External Libraries -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0KOVEMcAgscc9ST4vZGTlzNCsoB8hP8lJ6d+xq2DIe4HHnsdx8rWF" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js" integrity="sha384-XjKyOOlGwcjNTAIQHIpgOno0Hl1YQqzUOEleOLALmuqehneUG+vnGctmNOspLBIO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous"></script>
+
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+        .katex { font-size: 1.1em; }
+        .slider-container { display: grid; grid-template-columns: 40px 1fr 60px; gap: 1rem; align-items: center; }
+    </style>
+</head>
 <body class="bg-gray-50 text-gray-800">
 
     <div class="container mx-auto p-4 md:p-8">
@@ -65,7 +64,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             // --- IMPORTANT: SET YOUR BACKEND URL HERE ---
             // This will be the URL you get from Render after deploying the Python app.
-            const backendUrl = 'https://timed-wealth-tax.onrender.com/';
+            const backendUrl = 'https://timed-wealth-tax.onrender.com';
 
             const params = {
                 r:    { min: 0.00, max: 0.10, step: 0.001, value: 0.03, label: 'r (interest rate)' },
@@ -144,7 +143,7 @@
                         w1ResultEl.textContent = 'Error';
                         w2ResultEl.textContent = 'See console for details.';
                     }
-                }, 250); // Debounce to avoid flooding the server with requests
+                }, 250);
             }
 
             function plotPaths(w1_opt, w2_opt, p) {
@@ -182,3 +181,5 @@
     </script>
 </body>
 </html>
+
+
